--- a/tests/templates/kuttl/smoke/31-assert.yaml
+++ b/tests/templates/kuttl/smoke/31-assert.yaml
@@ -1,6 +1,7 @@
 ---
 apiVersion: kuttl.dev/v1beta1
 kind: TestAssert
+timeout: 300
 commands:
   - script: kubectl exec -n $NAMESPACE trino-test-helper-0 -- python /tmp/check-active-workers.py -u admin -p admin -n $NAMESPACE -w 2
   - script: kubectl exec -n $NAMESPACE trino-test-helper-0 -- python /tmp/check-opa.py -n $NAMESPACE
