--- a/tests/test-definition.yaml
+++ b/tests/test-definition.yaml
@@ -43,9 +43,9 @@ tests:
       - hdfs
       - zookeeper
       - s3-use-tls
-  # - name: tls
-  #   dimensions:
-  #     - trino
-  #     - use-authentication
-  #     - use-tls
-  #     - use-internal-tls
+  - name: tls
+    dimensions:
+      - trino
+      - use-authentication
+      - use-tls
+      - use-internal-tls
