--- a/docs/modules/usage_guide/examples/code/trino-secure-tls-only.yaml
+++ b/docs/modules/usage_guide/examples/code/trino-secure-tls-only.yaml
@@ -16,9 +16,12 @@ metadata:
   name: simple-trino
 spec:
   version: 387-stackable0.1.0
+  config:
+    tls:
+      secretClass: trino-tls # <1>
   catalogLabelSelector:
     matchLabels:
-      trino: simple-trino
+      trino: simple-trino # <2>
   coordinators:
     roleGroups:
       default:
@@ -27,6 +30,19 @@ spec:
     roleGroups:
       default:
         replicas: 1
+---
+apiVersion: secrets.stackable.tech/v1alpha1
+kind: SecretClass
+metadata:
+  name: trino-tls # <1>
+spec:
+  backend:
+    autoTls: # <3>
+      ca:
+        secret:
+          name: secret-provisioner-trino-tls-ca
+          namespace: default
+        autoGenerate: true
 ---
 apiVersion: hive.stackable.tech/v1alpha1
 kind: HiveCluster
