--- a/docs/modules/usage_guide/examples/code/trino-secure-tls.yaml
+++ b/docs/modules/usage_guide/examples/code/trino-secure-tls.yaml
@@ -16,9 +16,17 @@ metadata:
   name: simple-trino
 spec:
   version: 387-stackable0.1.0
+  config:
+    tls:
+      secretClass: trino-tls # <1>
+  authentication:
+    method:
+      multiUser:
+        userCredentialsSecret:
+          name: trino-users # <2>
   catalogLabelSelector:
     matchLabels:
-      trino: simple-trino
+      trino: simple-trino # <3>
   coordinators:
     roleGroups:
       default:
@@ -27,6 +35,28 @@ spec:
     roleGroups:
       default:
         replicas: 1
+---
+apiVersion: secrets.stackable.tech/v1alpha1
+kind: SecretClass
+metadata:
+  name: trino-tls # <1>
+spec:
+  backend:
+    autoTls: # <4>
+      ca:
+        secret:
+          name: secret-provisioner-trino-tls-ca
+          namespace: default
+        autoGenerate: true
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: trino-users # <2>
+type: kubernetes.io/opaque
+stringData:
+  # admin:admin
+  admin: $2y$10$89xReovvDLacVzRGpjOyAOONnayOgDAyIS2nW9bs5DJT98q17Dy5i
 ---
 apiVersion: hive.stackable.tech/v1alpha1
 kind: HiveCluster
