--- a/docs/antora.yml
+++ b/docs/antora.yml
@@ -4,4 +4,5 @@ title: Stackable Operator for Trino
 nav:
   - modules/getting_started/nav.adoc
   - modules/ROOT/nav.adoc
+  - modules/usage_guide/nav.adoc
 prerelease: true
